package AkvpStorage;

message Everything
{
  required bytes sealed_master_secret=1;
  required bytes mac_of_header=2;
  required Header header=3;
//  MacdEncdEntry macd_encd_entries=;
}

message Header
{
//  bytes sealed_private_key=;
//  bytes public_key=;
//  bytes sealed_master_symmetric_secret=;
  required string audit_pub_key_pem=4;
}

message MacdEncdEntry
{
  required string key=1;
  required bytes salt=2;
  required bytes mac=3;
  required bytes encd_entry=4;
}
